--- a/style.css
+++ b/style.css
@@ -21,7 +21,9 @@ body, html{
 .winner-display{
     height: 100%;
     width: 100%;
-    background-color: grey;
+    opacity: 90%;
+    border: none;
+    background-color: rgb(218, 218, 218);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,10 +32,10 @@ body, html{
 }
 
 .winner-text{
-    height: 200px;
-    width: 200px;
+    height: 210px;
+    width: 210px;
     border-radius: 50%;
-    opacity: 70%;
+    opacity: 100%;
     border: black solid 3px;
     font-size: 48px;
     display: flex;
